Update About page CSS for card content and animation. Improve readability & styling. Fix animation bug in card transition for enhanced user engagement.

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -46,3 +46,23 @@
   position: relative;
   display: inline-block;
 }
+.abt-card .abt-copy h1 {
+  font-size: clamp(1.5rem, 5vw, 3rem);
+  /* background-image: linear-gradient( */
+  /*   90deg, */
+  /*   rgba(37, 99, 235, 1) 0%, */
+  /*   rgba(34, 197, 94, 1) 35%, */
+  /*   rgba(79, 70, 229, 1) 100% */
+  /* ); */
+  /* background-size: 100%; */
+  /* background-repeat: repeat; */
+  /* background-clip: text; */
+  /* -webkit-background-clip: text; */
+  /* -webkit-text-fill-color: transparent; */
+  /* -moz-background-clip: text; */
+  /* -moz-text-fill-color: transparent; */
+}
+
+.abt-card .abt-copy p {
+  font-size: clamp(0.7rem, 2vw, 1.5rem);
+}
